--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -371,8 +371,14 @@
   .section-hero .section-inner {
     padding: 10rem 40rem 2rem 0;
   }
+
+  /* Section Latest news ============================= */
+  .section-latest-news .row{flex-direction: row;}
+
   
+
   /*** 4. CARD ***/
+
   
   /* Card (all styles)
       ============================= */
