--- a/flexbox/5-styles.css
+++ b/flexbox/5-styles.css
@@ -181,25 +181,25 @@
       ============================= */
   
   ul.row {
-    margin: 0;
+    margin: -1rem;
     padding: 0;
     list-style: none;
   }
   
-  .row{display: flex;}
+  
   
   
   [class*='col-'] {
 
-    padding: 0.5rem;
+    margin: 1rem;
   }
   
   .col-1-3 {
-    width: 33.33%;
+    width: calc((100% / 3) - 2rem);
   }
   
   .col-1-2 {
-    width: 50%;
+    width: calc((100% / 2) - 2rem)
   }
   
   /* Navbar
@@ -272,6 +272,7 @@
     top: var(--header-logo-link-top);
     left: var(--header-logo-link-left);
   }
+  
   
   /* Footer
       ============================= */
@@ -370,8 +371,15 @@
   .section-hero .section-inner {
     padding: 10rem 40rem 2rem 0;
   }
+
+  /* Section Latest news ============================= */
+  .section-latest-news .row{flex-direction:row-reverse;}
+  .section-sevices .row{flex-wrap: wrap;}
+
   
+
   /*** 4. CARD ***/
+
   
   /* Card (all styles)
       ============================= */
