--- a/flexbox/3-styles.css
+++ b/flexbox/3-styles.css
@@ -375,6 +375,9 @@
 
   /* Section Latest news ============================= */
   .section-latest-news .row{flex-direction:row-reverse;}
+
+
+  /* Section SERVICES ============================= */
   .section-sevices .row{flex-wrap: wrap;}
 
   
