--- a/flexbox/5-styles.css
+++ b/flexbox/5-styles.css
@@ -375,7 +375,11 @@
 
   /* Section Latest news ============================= */
   .section-latest-news .row{flex-direction:row-reverse;}
-  .section-sevices .row{flex-wrap: wrap;}
+  
+  
+  
+  /* Section SERVICES ============================= */
+  .section-services .row{flex-wrap: wrap;}
 
   
 
