--- a/flexbox/5-styles.css
+++ b/flexbox/5-styles.css
@@ -59,13 +59,12 @@
     --section-footer-padding: 3rem 0 0;
     --section-footer-align: center;
   
-    /** HEADER **/
+    /** HEADER **/  
+    
     --header-padding: 4rem 0 0;
-    --header-logo-position: relative;
-    --header-logo-link-display: inline-block;
-    --header-logo-link-position: absolute;
-    --header-logo-link-top: -1rem;
-    --header-logo-link-left: 0;
+   
+
+   
   
     /** FOOTER **/
     --footer-padding: 5rem 0 1rem;
@@ -206,9 +205,7 @@
   /* Navbar
       ============================= */
   
-  .navbar-menu {
-    float: right;
-  }
+  
   
   .nav {
     margin: 0;
@@ -263,17 +260,12 @@
          background: transparent;
   }
   
-  .header-logo {
-    position: var(--header-logo-position);
-  }
   
-  .header-logo a {
-    display: var(--header-logo-link-display);
-    position: var(--header-logo-link-position);
-    top: var(--header-logo-link-top);
-    left: var(--header-logo-link-left);
-  }
-  
+
+  .header-container{
+    display: flex;
+  justify-content: space-between
+  ;}
   
   /* Footer
       ============================= */
