--- a/flexbox/3-styles.css
+++ b/flexbox/3-styles.css
@@ -379,7 +379,7 @@
 
   /* Section SERVICES ============================= */
   
-  .section-services .row{
+  section.section-services .row{
     
     flex-wrap: wrap;}
 
